--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="copy-container">
         <h1>HI WIDYA<span>.</span></h1>
         <h2>MY PORTFOLIO</h2>
-        <img src="images/Ninja Ken.png" alt="Ninaj Ken">
+        <img src="Ninja Ken.png" alt="Ninaj Ken">
       </div>
       
       <div class="about">
@@ -33,15 +33,15 @@
       <div class="contents">
         <h3><a id="work-link">Proyek Contoh</a></h3>
         <div class="contents-item">
-          <img src="images/Latihan1.PNG">
+          <img src="Latihan1.PNG">
           <p>Practice 1</p>
         </div>
         <div class="contents-item">
-          <img src="images/Latihan2.PNG">
+          <img src="Latihan2.PNG">
           <p>Practice 2</p>
         </div>
         <div class="contents-item">
-        <img src="images/Latihan3.PNG">
+        <img src="Latihan3.PNG">
           <p>Practice 3</p>
         </div>
         
